--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
       <input type="submit" value="Log In" />
     </form>
     <h1 class="hidden" id="greeting"></h1>
+    <div id="quote">
+      <p class="quote"></p>
+      <p class="quote"></p>
+    </div>
     <form id="todo-form">
       <input type="text" placeholder="Write a To Do and Press Enter" required />
     </form>
     <ul id="todo-list"></ul>
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
     <div id="weather">
-      <span></span>
-      <span></span>
+      <p class="weather"></p>
+      <p class="weather"></p>
     </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
